feat(Makefile): fixed broken Makefile targets and jshell script